fix packaging warnings